Add HeadlineLayer for "police 995" - add "spinner" font - Layer.render() now returns DrawArea, will be used to offset next layer

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,14 @@
+@font-face {
+    font-family: "spinner";
+    src: url(./spinner.ttf) format("truetype");
+}
+
 body {
     font-family: sans-serif;
+}
+
+h1 {
+    font-family: "spinner";
 }
 
 .full {
