Add a wrapper around the canvas so the actual size of the container can always be found - add some warnings if each element isn't found - also turn off debug logging in headline layer

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,8 +22,9 @@ h1 {
     flex-wrap: nowrap;
     background-color: #ccc;
 
-    .card-canvas {
+    .card-canvas-container {
         flex-grow: 2;
+        overflow: hidden;
     }
 
     .card-widgets {
