Change "name" font to local file Cutive-Regular.ttf, will need to do manual spacing but the shapes look ok - http://www.1001fonts.com/cutive-font.html

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,11 @@
 @font-face {
     font-family: "spinner";
-    src: url(./spinner.ttf) format("truetype");
+    src: url('./spinner.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: "Cutive-Regular";
+    src: url('./Cutive-Regular.ttf') format("truetype");
 }
 
 body {
